# web-training-platform

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  opencode.jsonc  package.json  pnpm-lock.yaml  pyproject.toml
apps/api/: AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: README.md  env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_image_uris.py  0003_pgvector_embeddings.py  0004_dataset_embed_config.py  0005_add_label_studio_fields.py  0006_add_sample_created_at.py  0007_add_users_orgs_memberships.py  0008_add_personal_access_tokens.py  0009_add_schedules_table.py  0010_add_org_id_to_resources.py  0011_seed_default_org_and_superadmin.py  0012_add_is_public_flag.py  0013_add_user_id_fk_columns.py  0014_ls_project_id_not_null.py  0015_add_model_fields.py  0016_add_prediction_review_tables.py  0017_add_prediction_jobs.py  0018_platform_predictions_and_collections.py
apps/api/app/: cli.py  container.py  main.py
apps/api/app/agent/: assembler.py  global_assembler.py  global_prompt_template.md  global_runtime.py  global_tools.py  metadata_inference.py  prompt_template.md  runtime.py  session_store.py  surface_store.py  tools.py
apps/api/app/api/: deps.py  schemas.py
apps/api/app/core/: config.py
apps/api/app/data/: __init__.py  classification.py  vqa.py
apps/api/app/db/: ls_session.py  models.py  session.py
apps/api/app/domain/: contracts.py  interfaces.py  models.py  types.py
apps/api/app/flows/: drain_dataset.py  predict_job.py  serve.py  train_job.py
apps/api/app/presets/: registry.py  runtime.py  schema.py
apps/api/app/repositories/: inmemory.py  ls_read_repository.py  sql_repository.py
apps/api/app/runtime/: dspy.py  torch.py  training_runner.py
apps/api/app/services/: artifacts.py  auth.py  compatibility.py  embedding.py  engines.py  feature_ops.py  inference_worker.py  kubeflow_client.py  label_studio.py  llm.py  model_service.py  notification.py  orchestrator.py  prediction_orchestrator.py  prediction_service.py  prefect_client.py  prefect_engine.py  scheduler.py  service_health.py  task_tracker.py
apps/api/app/storage/: interfaces.py  minio_storage.py
apps/api/config/: base.yaml  dev.yaml  local-smoke.yaml  prod.yaml  test.yaml
apps/api/examples/: vqa-demo.jsonl
apps/api/presets/clip-zero-shot-v1/: preset.yaml
apps/api/scripts/: seed_oxford_flowers.py
apps/api/tests/: bench_ls_import.py  bench_sample_upload.py  conftest.py  test_agent.py  test_annotation_crud.py  test_api_flows.py  test_artifact_download.py  test_auth.py  test_auth_routes.py  test_classify_endpoint.py  test_dashboard.py  test_dataset_routes.py  test_embedding.py  test_feature_ops.py  test_flow_worker_bootstrap.py  test_global_agent.py  test_health.py  test_image_upload.py  test_label_studio_client.py  test_ls_annotation_sync.py  test_ls_dataset_hooks.py  test_ls_export.py  test_ls_image_resolve.py  test_ls_prediction_sync.py  test_ls_sample_hooks.py  test_misc_routes.py  test_model_routes.py  test_model_upload.py  test_prediction_flow.py  test_prediction_orchestrator.py  test_prediction_review.py  test_prediction_routes.py  test_prediction_service.py  test_prefect_client.py  test_prefect_engine.py  test_schedule_endpoints.py  test_scheduler.py  test_task_tracker.py  test_training_orchestrator.py  test_training_routes.py  (+2 more)
apps/embedding/: Dockerfile  pyproject.toml
apps/embedding/app/: __main__.py  server.py
docs/: SMOKE_TEST.md  (+13 more)
libs/mcp-server/: pyproject.toml
libs/mcp-server/finetune_mcp/: __init__.py  client.py  config.py  server.py
(+136 files in other folders)
